Bug populate database FHIR version 4

--- a/src/database/modifydata.ipynb
+++ b/src/database/modifydata.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3dcc0e23",
    "metadata": {},
@@ -10,30 +11,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 78,
+   "id": "917b3b56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "  'Accept': 'application/fhir+json; fhirVersion=4.0',\n",
+    "  'Content-Type': 'application/fhir+json; fhirVersion=4.0',\n",
+    "  'Cookie': 'ARRAffinity=a6e48b9e9d2653435be7b61998d8624b44115214104213d6c8b8c526cc56dc70; ARRAffinitySameSite=a6e48b9e9d2653435be7b61998d8624b44115214104213d6c8b8c526cc56dc70'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "id": "500c8960",
    "metadata": {},
    "outputs": [],
    "source": [
     "import uuid\n",
     "import pandas as pd\n",
+    "import requests\n",
+    "import json\n",
     "\n",
     "def generate_observation(datetime, value):\n",
     "    ID = str(uuid.uuid4())\n",
     "    observation = {\n",
     "        \"resourceType\": \"Observation\",\n",
     "        \"id\": ID,\n",
-    "        \"meta\": {\n",
-    "            \"profile\": [\n",
-    "                \"http://hl7.org/fhir/us/core/StructureDefinition/us-gestational_age\"\n",
-    "            ]\n",
-    "        },\n",
     "        \"status\": \"final\",\n",
     "        \"category\": [\n",
     "            {\n",
     "                \"coding\": [\n",
     "                    {\n",
-    "                        \"system\": \"http://terminology.hl7.org/CodeSystem/observation-category\",\n",
+    "                        \"system\": \"gestational-age\",\n",
     "                        \"code\": \"gestational-age\",\n",
     "                        \"display\": \"Gestational age\"\n",
     "                    }\n",
@@ -43,7 +55,7 @@
     "        \"code\": {\n",
     "            \"coding\": [\n",
     "                {\n",
-    "                    \"system\": \"http://loinc.org\",\n",
+    "                    \"system\": \"gestAge\",\n",
     "                    \"code\": \"gestAge\",\n",
     "                    \"display\": \"Gestational Age\"\n",
     "                }\n",
@@ -56,7 +68,8 @@
     "        \"encounter\": {\n",
     "            \"reference\": \"urn:uuid:103c7290-d241-84b6-ee1f-a845af61f414\"\n",
     "        },\n",
-    "        \"effectiveDateTime\": datetime, #\"2020-08-31T22:13:22+02:00\",\n",
+    "        \"effectiveDateTime\": datetime #\"2020-08-31T22:13:22+02:00\",\n",
+    "        ,\n",
     "        \"issued\": \"2020-08-31T22:13:22.922+02:00\",\n",
     "        \"valueQuantity\": {\n",
     "            \"value\": value,\n",
@@ -65,104 +78,17 @@
     "    }\n",
     "    url = f\"https://firelyasserver.azurewebsites.net/Observation/{ID}\"\n",
     "    payload = json.dumps(observation)\n",
-    "    response = requests.request(\"PUT\", url, data=payload)\n",
-    "    \n",
+    "    response = requests.request(\"PUT\", url, data=payload, headers=headers)\n",
+    "    if response.status_code != 201 and response.status_code != 200:\n",
+    "        print('Not created')\n",
+    "        print(response.status_code)\n",
+    "        print(payload)\n",
     "    return observation "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8b9a76f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_careplan_coolingtherapy(datetime):\n",
-    "    careplan = {\n",
-    "      \"resourceType\": \"Procedures\",\n",
-    "      \"id\": str(uuid.uuid4()),\n",
-    "      \"meta\": {\n",
-    "        \"profile\": [ \"http://hl7.org/fhir/us/core/StructureDefinition/us-core-careplan\" ]\n",
-    "      },\n",
-    "      \"text\": {\n",
-    "        \"status\": \"generated\",\n",
-    "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\">Care Plan for cooling therapy</li></ul></div>\"\n",
-    "      },\n",
-    "      \"status\": \"completed\",\n",
-    "      \"intent\": \"order\",\n",
-    "      \"category\": [ {\n",
-    "        \"coding\": [ {\n",
-    "          \"system\": \"http://hl7.org/fhir/us/core/CodeSystem/careplan-category\",\n",
-    "          \"code\": \"assess-plan\"\n",
-    "        } ]\n",
-    "      }, {\n",
-    "        \"coding\": [ {\n",
-    "          \"system\": \"http://snomed.info/sct\",\n",
-    "          \"code\": \"CT\",\n",
-    "          \"display\": \"Cooling therapy\"\n",
-    "        } ],\n",
-    "        \"text\": \"Cooling therapy\"\n",
-    "      } ],\n",
-    "      \"subject\": {\n",
-    "        \"reference\": \"urn:uuid:45836564-5dce-327d-75e0-9c223b6544b1\"\n",
-    "      },\n",
-    "      \"encounter\": {\n",
-    "        \"reference\": \"urn:uuid:28325a28-9982-5904-55b8-c1c0dea21a3b\"\n",
-    "      },\n",
-    "      \"period\": {\n",
-    "        \"start\": datetime,\n",
-    "        \"end\": datetime\n",
-    "      },\n",
-    "      \"careTeam\": [ {\n",
-    "        \"reference\": \"urn:uuid:7987e582-8507-83b9-cf3b-932bae11c4db\"\n",
-    "      } ],\n",
-    "      \"addresses\": [ {\n",
-    "        \"reference\": \"urn:uuid:1ef7dec0-50bc-67c9-f4d3-f7c36acabe71\"\n",
-    "      } ],\n",
-    "      \"activity\": [ {\n",
-    "        \"detail\": {\n",
-    "          \"code\": {\n",
-    "            \"coding\": [ {\n",
-    "              \"system\": \"http://snomed.info/sct\",\n",
-    "              \"code\": \"229586001\",\n",
-    "              \"display\": \"Cooling therapy\"\n",
-    "            } ],\n",
-    "            \"text\": \"Cooling therapy\"\n",
-    "          },\n",
-    "          \"reasonReference\": [ {\n",
-    "            \"reference\": \"urn:uuid:1ef7dec0-50bc-67c9-f4d3-f7c36acabe71\"\n",
-    "          } ],\n",
-    "          \"status\": \"completed\",\n",
-    "          \"location\": {\n",
-    "            \"display\": \"EXCEL HOME CARE SERVICES INC\"\n",
-    "          }\n",
-    "        }\n",
-    "      }, {\n",
-    "        \"detail\": {\n",
-    "          \"code\": {\n",
-    "            \"coding\": [ {\n",
-    "              \"system\": \"http://snomed.info/sct\",\n",
-    "              \"code\": \"229070002\",\n",
-    "              \"display\": \"Cooling therapy\"\n",
-    "            } ],\n",
-    "            \"text\": \"Stretching exercises\"\n",
-    "          },\n",
-    "          \"reasonReference\": [ {\n",
-    "            \"reference\": \"urn:uuid:1ef7dec0-50bc-67c9-f4d3-f7c36acabe71\"\n",
-    "          } ],\n",
-    "          \"status\": \"completed\",\n",
-    "          \"location\": {\n",
-    "            \"display\": \"EXCEL HOME CARE SERVICES INC\"\n",
-    "          }\n",
-    "        }\n",
-    "      } ]\n",
-    "    }\n",
-    "    return careplan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "id": "7fcc0182",
    "metadata": {},
    "outputs": [],
@@ -172,18 +98,11 @@
     "    procedure = {\n",
     "                \"resourceType\": \"Procedure\",\n",
     "                \"id\": ID,\n",
-    "                \"meta\": {\n",
-    "                    \"profile\": [\n",
-    "                        \"http://hl7.org/fhir/us/core/StructureDefinition/us-core-procedure\"\n",
-    "                    ],\n",
-    "                    \"versionId\": \"1d4a1e6c-6818-47c2-b45c-791bb5723d60\",\n",
-    "                    \"lastUpdated\": \"2023-05-17T14:42:10.242+00:00\"\n",
-    "                },\n",
     "                \"status\": \"completed\",\n",
     "                \"code\": {\n",
     "                    \"coding\": [\n",
     "                        {\n",
-    "                            \"system\": \"http://snomed.info/sct\",\n",
+    "                            \"system\": \"CT\",\n",
     "                            \"code\": \"CT\",\n",
     "                            \"display\": \"Cooling therapy\"\n",
     "                        }\n",
@@ -191,27 +110,29 @@
     "                    \"text\": \"Cooling therapy\"\n",
     "                },\n",
     "                \"subject\": {\n",
-    "                    \"reference\": \"https://server.fire.ly/Patient/test-uscore4\"\n",
+    "                    \"reference\": \"no-ref\"\n",
     "                },\n",
     "                \"encounter\": {\n",
-    "                    \"reference\": \"https://server.fire.ly/Encounter/test-uscore4\"\n",
+    "                    \"reference\": \"no-ref\"\n",
     "                },\n",
     "                \"performedDateTime\": datetime,\n",
     "                \"location\": {\n",
-    "                    \"reference\": \"https://server.fire.ly/Location/test-uscore4\",\n",
+    "                    \"reference\": \"AMC\",\n",
     "                    \"display\": \"AMC\"\n",
     "                }\n",
     "            }\n",
     "    url = f\"https://firelyasserver.azurewebsites.net/Procedure/{ID}\"\n",
     "    payload = json.dumps(procedure)\n",
-    "    response = requests.request(\"PUT\", url, data=payload)\n",
-    "    \n",
+    "    response = requests.request(\"PUT\", url, data=payload, headers=headers)\n",
+    "    if response.status_code != 201 and response.status_code != 200:\n",
+    "        print('Not created')\n",
+    "        print(payload)\n",
     "    return procedure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 81,
    "id": "ed04d99c",
    "metadata": {},
    "outputs": [],
@@ -221,175 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "b5f79c94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "import random\n",
-    "import pytz\n",
-    "import pandas as pd\n",
-    "import json\n",
-    "\n",
-    "df1 = pd.DataFrame(columns=['year', 'gestational age'])\n",
-    "df2 = pd.DataFrame(columns=['year'])\n",
-    "\n",
-    "def generate_random_datetime(year):\n",
-    "    start_date = datetime.datetime(year, 1, 1)\n",
-    "    end_date = datetime.datetime(year, 12, 31)\n",
-    "\n",
-    "    # Calculate the total number of seconds within the specified year\n",
-    "    total_seconds = (end_date - start_date).total_seconds()\n",
-    "\n",
-    "    # Generate a random duration within the specified year\n",
-    "    random_duration = random.randint(0, int(total_seconds))\n",
-    "\n",
-    "    # Add the random duration to the start date\n",
-    "    random_datetime = start_date + datetime.timedelta(seconds=random_duration)\n",
-    "\n",
-    "    # Convert the random datetime to the desired format\n",
-    "    formatted_datetime = random_datetime.strftime(\"%Y-%m-%dT%H:%M:%S.%f\")\n",
-    "\n",
-    "    return formatted_datetime\n",
-    "\n",
-    "def generate_random_gestational_age():\n",
-    "    # Generate a random gestational age with less prematurity during COVID times\n",
-    "    if random.random() < 0.7:  # 70% chance of being full term\n",
-    "        # source: https://pathways.org/adjusting-age-for-prematurity/\n",
-    "        gestational_age = random.randint(38, 42)  # Full-term range (38-42 weeks)\n",
-    "    else:\n",
-    "        gestational_age = random.randint(28, 37)  # Preterm range (28-37 weeks)\n",
-    "\n",
-    "    return gestational_age\n",
-    "\n",
-    "def generate_dfs(datetime, gestational_age):\n",
-    "    # Placeholder function to generate an observation\n",
-    "    # Replace this function with your actual implementation\n",
-    "    # You can access the datetime and gestational_age variables here\n",
-    "    # to generate the observation data for each patient\n",
-    "#     print(f\"Observation generated for datetime: {datetime} and gestational age: {gestational_age}\")\n",
-    "    \n",
-    "    df1.loc[len(df1)] = {'year': str(datetime)[:4], 'gestational age': gestational_age}\n",
-    "\n",
-    "for year in range(2017, 2024):\n",
-    "    for _ in range(1000):\n",
-    "        random_datetime = generate_random_datetime(year)\n",
-    "        random_gestational_age = generate_random_gestational_age()\n",
-    "\n",
-    "        if year == 2020 or year == 2021 or year == 2022:  # Considering the COVID period\n",
-    "            random_gestational_age += random.randint(2, 4)  # Increase the gestational age by 2 to 4 weeks\n",
-    "            \n",
-    "            if random.random() < 0.80:  # 80% chance of cooling therapy during covid\n",
-    "                generate_procedure_coolingtherapy(random_datetime)\n",
-    "                df2.loc[len(df2)] = {'year': str(random_datetime)[:4]}\n",
-    "\n",
-    "        \n",
-    "        generate_dfs(random_datetime, random_gestational_age)\n",
-    "        generate_observation(random_datetime, random_gestational_age)\n",
-    "        \n",
-    "        if year == 2017 or year == 2018 or year == 2019 or year == 2023:\n",
-    "            if random.random() < 0.60:  # 60% chance of cooling therapy during covid\n",
-    "                generate_procedure_coolingtherapy(random_datetime)\n",
-    "                df2.loc[len(df2)] = {'year': str(random_datetime)[:4]}\n",
-    "        \n",
-    "        generate_procedure_coolingtherapy\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "64edc012",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018    1000\n",
-      "2020    1000\n",
-      "2019    1000\n",
-      "2023    1000\n",
-      "2021    1000\n",
-      "2022    1000\n",
-      "2017    1000\n",
-      "Name: year, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "df1_1 = df1['year'].value_counts(0)\n",
-    "print(df1_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "b4167663",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022    816\n",
-      "2021    797\n",
-      "2020    792\n",
-      "2023    608\n",
-      "2019    603\n",
-      "2018    598\n",
-      "2017    598\n",
-      "Name: year, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "df2_1 = df2['year'].value_counts(0)\n",
-    "print(df2_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "2517b3c4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "year\n",
-      "2017    37.681\n",
-      "2018    37.776\n",
-      "2019    37.994\n",
-      "2020    40.571\n",
-      "2021    40.719\n",
-      "2022    40.596\n",
-      "2023    37.784\n",
-      "Name: gestational age, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "df1['gestational age'] = pd.to_numeric(df1['gestational age'])\n",
-    "df1_2 = df1.groupby('year')['gestational age'].mean()\n",
-    "print(df1_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "122ba10b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "url = \"https://firelyasserver.azurewebsites.net/Observation/ID\" "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "28c03ab7",
    "metadata": {},
    "outputs": [],
@@ -416,7 +169,8 @@
     "    random_datetime = start_date + datetime.timedelta(seconds=random_duration)\n",
     "\n",
     "    # Convert the random datetime to the desired format\n",
-    "    formatted_datetime = random_datetime.strftime(\"%Y-%m-%dT%H:%M:%S.%f\")\n",
+    "    formatted_datetime = random_datetime.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
+    "    formatted_datetime = str(formatted_datetime)+'+02:00'\n",
     "\n",
     "    return formatted_datetime\n",
     "\n",
@@ -435,7 +189,7 @@
     "    # Replace this function with your actual implementation\n",
     "    # You can access the datetime and gestational_age variables here\n",
     "    # to generate the observation data for each patient\n",
-    "#     print(f\"Observation generated for datetime: {datetime} and gestational age: {gestational_age}\")\n",
+    "    #print(f\"Observation generated for datetime: {datetime} and gestational age: {gestational_age}\")\n",
     "    \n",
     "    df1.loc[len(df1)] = {'year': str(datetime)[:4], 'gestational age': gestational_age}\n",
     "\n",
@@ -459,8 +213,7 @@
     "            if random.random() < 0.60:  # 60% chance of cooling therapy during covid\n",
     "                generate_procedure_coolingtherapy(random_datetime)\n",
     "                df2.loc[len(df2)] = {'year': str(random_datetime)[:4]}\n",
-    "        \n",
-    "        generate_procedure_coolingtherapy\n"
+    "        \n"
    ]
   }
  ],
@@ -480,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
