--- a/src/database/resetdata.ipynb
+++ b/src/database/resetdata.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "500c8960",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "3e113645",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "c09ceddb",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "d270c2a3",
    "metadata": {},
    "outputs": [
@@ -82,12 +82,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "71\n"
+      "0\n",
+      "6\n"
      ]
     }
    ],
    "source": [
-    "delete_procedures_by_ID()"
+    "delete_procedures_by_ID()\n",
+    "delete_observations_by_ID()"
    ]
   }
  ],
