--- a/src/database/modifydata.ipynb
+++ b/src/database/modifydata.ipynb
@@ -63,7 +63,7 @@
     "            \"text\": \"Gestational Age\"\n",
     "        },\n",
     "        \"subject\": {\n",
-    "            \"reference\": \"urn:uuid:8e5e95dd-8c22-8da6-89bd-76160ff2cb80\"\n",
+    "            \"reference\": \"https://firelyasserver.azurewebsites.net/Patient/mom\"\n",
     "        },\n",
     "        \"encounter\": {\n",
     "            \"reference\": \"urn:uuid:103c7290-d241-84b6-ee1f-a845af61f414\"\n",
@@ -110,7 +110,7 @@
     "                    \"text\": \"Cooling therapy\"\n",
     "                },\n",
     "                \"subject\": {\n",
-    "                    \"reference\": \"no-ref\"\n",
+    "                    \"reference\": \"https://firelyasserver.azurewebsites.net/Patient/mom\"\n",
     "                },\n",
     "                \"encounter\": {\n",
     "                    \"reference\": \"no-ref\"\n",
@@ -194,7 +194,7 @@
     "    df1.loc[len(df1)] = {'year': str(datetime)[:4], 'gestational age': gestational_age}\n",
     "\n",
     "for year in range(2017, 2024):\n",
-    "    for _ in range(1000):\n",
+    "    for _ in range(500):\n",
     "        random_datetime = generate_random_datetime(year)\n",
     "        random_gestational_age = generate_random_gestational_age()\n",
     "\n",
