--- a/src/database/resetdata.ipynb
+++ b/src/database/resetdata.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "500c8960",
    "metadata": {},
    "outputs": [],
@@ -34,13 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "3e113645",
    "metadata": {},
    "outputs": [],
    "source": [
     "def delete_observations_by_ID():\n",
-    "    url = f\"https://firelyasserver.azurewebsites.net/Observation?_count=10000\"\n",
+    "    url = f\"https://firelyasserver.azurewebsites.net/Observation?_count=10000&_elements=id\"\n",
     "    response = requests.request(\"GET\", url)\n",
     "    if response.status_code != 200:\n",
     "        print('Not list')\n",
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c09ceddb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def delete_procedures_by_ID():\n",
-    "    url = f\"https://firelyasserver.azurewebsites.net/Procedure?_count=10000\"\n",
+    "    url = f\"https://firelyasserver.azurewebsites.net/Procedure?_count=10000&_elements=id\"\n",
     "    response = requests.request(\"GET\", url)\n",
     "    if response.status_code != 200:\n",
     "        print('Not list')\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "d270c2a3",
    "metadata": {},
    "outputs": [
@@ -82,8 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "6\n"
+      "3357\n"
      ]
     }
    ],
