Backend async requests + cache

--- a/src/database/modifydata copy.ipynb
+++ b/src/database/modifydata copy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "917b3b56",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "500c8960",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "734317fd",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "b04ed6a1",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
     "            \"gender\": \"female\",\n",
     "            \"birthDate\": str(birth).split('T')[0]\n",
     "        }\n",
-    "        url = f\"https://firelyasserver.azurewebsites.net/Patient/patient-{str(num_pat)}\"\n",
+    "        url = f\"https://firelyasserver-backup.azurewebsites.net/Patient/patient-{str(num_pat)}\"\n",
     "        payload = json.dumps(data)\n",
     "        response = requests.request(\"PUT\", url, data=payload, headers=headers)\n",
     "        if response.status_code != 201 and response.status_code != 200:\n",
@@ -153,7 +153,7 @@
     "            \"gender\": \"male\",\n",
     "            \"birthDate\": str(birth).split('T')[0]\n",
     "        }\n",
-    "        url = f\"https://firelyasserver.azurewebsites.net/Patient/patient-male-{str(num_pat_male)}\"\n",
+    "        url = f\"https://firelyasserver-backup.azurewebsites.net/Patient/patient-male-{str(num_pat_male)}\"\n",
     "        payload = json.dumps(data)\n",
     "        response = requests.request(\"PUT\", url, data=payload, headers=headers)\n",
     "        if response.status_code != 201 and response.status_code != 200:\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "5b6fde45",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
     "            \"text\": \"Gestational Age\"\n",
     "        },\n",
     "        \"subject\": {\n",
-    "            \"reference\": f\"https://firelyasserver.azurewebsites.net/Patient/patient-{random_patient}\"\n",
+    "            \"reference\": f\"https://firelyasserver-backup.azurewebsites.net/Patient/patient-{random_patient}\"\n",
     "        },\n",
     "        \"encounter\": {\n",
     "            \"reference\": \"no-ref\"\n",
@@ -210,7 +210,7 @@
     "            \"unit\": \"weeks\"\n",
     "        }\n",
     "    }\n",
-    "    url = f\"https://firelyasserver.azurewebsites.net/Observation/{ID}\"\n",
+    "    url = f\"https://firelyasserver-backup.azurewebsites.net/Observation/{ID}\"\n",
     "    payload = json.dumps(observation)\n",
     "    response = requests.request(\"PUT\", url, data=payload, headers=headers)\n",
     "    if response.status_code != 201 and response.status_code != 200:\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "7fcc0182",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
     "                    \"text\": \"Cooling therapy\"\n",
     "                },\n",
     "                \"subject\": {\n",
-    "                    \"reference\": f\"https://firelyasserver.azurewebsites.net/Patient/patient-{random_patient}\"\n",
+    "                    \"reference\": f\"https://firelyasserver-backup.azurewebsites.net/Patient/patient-{random_patient}\"\n",
     "                },\n",
     "                \"encounter\": {\n",
     "                    \"reference\": \"no-ref\"\n",
@@ -253,7 +253,7 @@
     "                    \"display\": \"AMC\"\n",
     "                }\n",
     "            }\n",
-    "    url = f\"https://firelyasserver.azurewebsites.net/Procedure/{ID}\"\n",
+    "    url = f\"https://firelyasserver-backup.azurewebsites.net/Procedure/{ID}\"\n",
     "    payload = json.dumps(procedure)\n",
     "    response = requests.request(\"PUT\", url, data=payload, headers=headers)\n",
     "    if response.status_code != 201 and response.status_code != 200:\n",
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "28c03ab7",
    "metadata": {},
    "outputs": [],
@@ -272,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "3cfafa00",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "for year in range(2017, 2024):\n",
-    "    for _ in range(1000):\n",
+    "    for _ in range(300):\n",
     "        random_datetime = generate_random_datetime(year)\n",
     "        random_gestational_age = generate_random_gestational_age()\n",
     "\n",
