Scripts to populate server and back-up

--- a/src/database/modifydata backup.ipynb
+++ b/src/database/modifydata backup.ipynb
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b04ed6a1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_patients():\n",
-    "    years = random.randint(1960,1980)\n",
+    "    years = range(20,80)\n",
     "    for num_pat in range(0,20):\n",
     "        birth = generate_random_datetime(years[num_pat])\n",
     "        data = {\n",
@@ -1200,82 +1200,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "28c03ab7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n",
-      "Risk not created\n"
+     "ename": "TypeError",
+     "evalue": "an integer is required (got type str)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m generate_patients()\n",
+      "Cell \u001b[1;32mIn[22], line 4\u001b[0m, in \u001b[0;36mgenerate_patients\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m years \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(random\u001b[39m.\u001b[39mrandint(\u001b[39m1960\u001b[39m,\u001b[39m1980\u001b[39m))\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m num_pat \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39m20\u001b[39m):\n\u001b[1;32m----> 4\u001b[0m     birth \u001b[39m=\u001b[39m generate_random_datetime(years[num_pat])\n\u001b[0;32m      5\u001b[0m     data \u001b[39m=\u001b[39m {\n\u001b[0;32m      6\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mresourceType\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mPatient\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      7\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mid\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpatient-\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mstr\u001b[39m(num_pat)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mbirthDate\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mstr\u001b[39m(birth)\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39mT\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m]\n\u001b[0;32m     26\u001b[0m     }\n\u001b[0;32m     27\u001b[0m     url \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mhttps://firelyasserver-backup.azurewebsites.net/Patient/patient-\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mstr\u001b[39m(num_pat)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
+      "Cell \u001b[1;32mIn[4], line 5\u001b[0m, in \u001b[0;36mgenerate_random_datetime\u001b[1;34m(year)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgenerate_random_datetime\u001b[39m(year):\n\u001b[1;32m----> 5\u001b[0m     start_date \u001b[39m=\u001b[39m datetime\u001b[39m.\u001b[39;49mdatetime(year, \u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m)\n\u001b[0;32m      6\u001b[0m     end_date \u001b[39m=\u001b[39m datetime\u001b[39m.\u001b[39mdatetime(year, \u001b[39m12\u001b[39m, \u001b[39m31\u001b[39m)\n\u001b[0;32m      8\u001b[0m     \u001b[39m# Calculate the total number of seconds within the specified year\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: an integer is required (got type str)"
      ]
     }
    ],
@@ -1330,8 +1269,7 @@
     "        if year == 2017 or year == 2018 or year == 2019 or year == 2023:\n",
     "            if random.random() < 0.60:  # 60% chance of cooling therapy during covid\n",
     "                generate_procedure_coolingtherapy(random_datetime)\n",
-    "                df2.loc[len(df2)] = {'year': str(random_datetime)[:4]}\n",
-    "        \n"
+    "                df2.loc[len(df2)] = {'year': str(random_datetime)[:4]}\n"
    ]
   }
  ],
